Updated build preparing to package windows release