@@ -2,10 +2,10 @@ plugins {
   id 'application'
   id 'com.adarshr.test-logger' version '2.0.0' 
   id 'java'
-  id 'org.beryx.jlink' version "2.16.4"
+  id 'org.beryx.jlink' version "2.17.3"
   id 'org.openjfx.javafxplugin' version "0.0.8"
-  id "com.github.ben-manes.versions" version "0.27.0" 
-  id "org.javamodularity.moduleplugin" version "1.5.0" 
+  id "com.github.ben-manes.versions" version "0.28.0" 
+  id "org.javamodularity.moduleplugin" version "1.5.0" //BUGS in 1.6.0
 }
 
 repositories {
@@ -15,41 +15,44 @@ repositories {
         url 'http://dl.bintray.com/hohonuuli/maven'
     }
     maven {
+        url 'http://dl.bintray.com/org-mbari/maven'
+    }
+    maven {
         url 'http://dl.bintray.com/jerady/maven'
     }
 }
 
-version = '0.1.2'
+version = '0.1.3'
 
 dependencies {
   implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.1'
   implementation 'com.google.code.gson:gson:2.8.6'
-  implementation 'com.google.guava:guava:28.1-jre'
+  implementation 'com.google.guava:guava:28.2-jre'
   implementation 'com.guigarage:sdkfx:0.2.3.jre11'
   implementation 'com.jfoenix:jfoenix:9.0.9'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
-  implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-  implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+  implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+  implementation 'com.squareup.retrofit2:retrofit:2.8.1'
   implementation 'com.typesafe:config:1.4.0'
   implementation 'org.bushe:eventbus:1.4'
   implementation 'org.fxmisc.easybind:easybind:1.0.3'
-  implementation 'org.mbari:mbarix4j:2.0.2.jre11'
+  implementation 'org.mbari:mbarix4j:2.0.5.jre11'
   implementation 'org.mbari.vcr4j:vcr4j-core:4.0.2'
   implementation 'org.mbari.vcr4j:vcr4j-sharktopoda:4.0.2'
-  implementation 'org.slf4j:slf4j-api:2.0.0-alpha0'
-  runtimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+  implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+  runtimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha4' // 1.3.0-alpha5 isn't working with Jansi
   runtimeOnly 'com.h2database:h2:1.4.200'
-  runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:8.1.0.jre11-preview'
+  runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:8.2.2.jre11'
 //   runtimeOnly 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
   runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1' // needed by logback
   runtimeOnly 'net.sourceforge.jtds:jtds:1.3.1'
-  runtimeOnly 'org.apache.derby:derby:10.15.1.3'
-  runtimeOnly 'org.apache.derby:derbyclient:10.15.1.3'
-  runtimeOnly 'org.apache.derby:derbynet:10.15.1.3'
-  runtimeOnly 'org.apache.derby:derbyshared:10.15.1.3'
-  runtimeOnly 'org.apache.derby:derbytools:10.15.1.3'
+  runtimeOnly 'org.apache.derby:derby:10.15.2.0'
+  runtimeOnly 'org.apache.derby:derbyclient:10.15.2.0'
+  runtimeOnly 'org.apache.derby:derbynet:10.15.2.0'
+  runtimeOnly 'org.apache.derby:derbyshared:10.15.2.0'
+  runtimeOnly 'org.apache.derby:derbytools:10.15.2.0'
   runtimeOnly 'org.postgresql:postgresql:42.2.6'
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13'
 
   implementation('org.jfxtras:jfxtras-controls:10.0-r1') {
     exclude group: 'org.openjfx', module: 'javafx-base'
@@ -58,7 +61,7 @@ dependencies {
     because("If not excluded we end up with both mac and linux javafx jars which cause jlink to fail")
   }
 
-  implementation('org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.5') {
+  implementation('org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.6') {
       exclude module: "javax.persistence"
   }
 }
@@ -74,7 +77,8 @@ javafx {
 }
 
 def runtimeJvmArgs = [
-        '-Xms1g'
+        '-Xms1g',
+        "--add-opens",  "java.base/java.lang.invoke=vars.query.merged.module"
 ]
 
 def confEnvParams = [
